Fix marker z-index.

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -155,3 +155,11 @@ button::-moz-focus-inner {
   font-size: 16px;
   height: 180px;
 }
+
+.leaflet-map-pane {
+  z-index: 2 !important;
+}
+
+.leaflet-google-layer {
+  z-index: 1 !important;
+}
